<?xml version="1.0"?>
<package format="2">
  <name>bot_cont</name>
  <version>0.0.0</version>
  <author email="jane.doe@example.com">Jane Doe</author>
  <description>The bot_cont package</description>


  <maintainer email="ayken@todo.todo">ayken</maintainer>

  <license>TODO</license>



  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>turtlesim</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>

  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>turtlesim</build_export_depend>

  
  <exec_depend>rospy</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>turtlesim</exec_depend>
  <exec_depend>python3</exec_depend>
  <exec_depend>websockets</exec_depend>

  <export>


  </export>
</package>
